--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple, elegant inheritance for your JavaScript",
   "main": "class.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap ./test"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,8 @@
   ],
   "author": "Ben Howdle",
   "license": "BSD",
-  "readmeFilename": "README.md"
+  "readmeFilename": "README.md",
+  "devDependencies": {
+    "tap": "~0.4.6"
+  }
 }
